# burn2015_leds

./: .gitignore  .gitmodules  .sconsign.dblite  README.md  main.cpp  platformio.ini
Fire2012/: Fire2012.ino
IRrecvDump/: IRrecvDump.ino
MyPlayground1.playground/: Contents.swift  timeline.xctimeline
MyPlayground1.playground/playground.xcworkspace/xcuserdata/willem.xcuserdatad/: UserInterfaceState.xcuserstate
Renderer/Renderer/: Renderer.cpp  Renderer.h  main.cpp
Renderer/Renderer.xcodeproj/: project.pbxproj
Renderer/Renderer.xcodeproj/project.xcworkspace/xcshareddata/: Renderer.xcscmblueprint
Renderer/Renderer.xcodeproj/project.xcworkspace/xcuserdata/willem.xcuserdatad/: UserInterfaceState.xcuserstate
Renderer/Renderer.xcodeproj/xcuserdata/willem.xcuserdatad/xcschemes/: Renderer.xcscheme  xcschememanagement.plist
bike/: CMakeLists.txt
bike/src/: main.cpp  star.h
camp/: .sconsign.dblite  CMakeLists.txt
camp/src/: main.cpp
fastled_test/: fastled_test.ino
harness/harness/: AppDelegate.swift  ViewController.swift
harness/harness.xcodeproj/: project.pbxproj
harness/harness.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
harness/harness.xcodeproj/project.xcworkspace/xcuserdata/willem.xcuserdatad/: UserInterfaceState.xcuserstate
harness/harness.xcodeproj/xcuserdata/willem.xcuserdatad/xcschemes/: harness.xcscheme  xcschememanagement.plist
harness/harness/Base.lproj/: Main.storyboard
harness2/harness2/: AppDelegate.swift  Info.plist  ObjCtoCplusplus.mm  ObjcObject.h  Renderer.cpp  Renderer.h  ViewController.swift  harness2-Bridging-Header.h
harness2/harness2.xcodeproj/: project.pbxproj
harness2/harness2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
harness2/harness2.xcodeproj/project.xcworkspace/xcuserdata/willem.xcuserdatad/: UserInterfaceState.xcuserstate
harness2/harness2.xcodeproj/xcuserdata/willem.xcuserdatad/xcschemes/: harness2.xcscheme  xcschememanagement.plist
harness2/harness2/Base.lproj/: Main.storyboard
hoola/: .sconsign.dblite  CMakeLists.txt  star.cpp
hoola/src/: main.cpp  star.h
hoop/: platformio.ini
hoop/hoop/: Makefile  Position.h  ReadMe.txt  Renderer.h  dof.cpp  dof.h  dof.hpp  hoop.cpp  main.cpp
hoop/hoop.xcodeproj/: project 0.pbxproj  project.pbxproj
hoop/hoop.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
hoop/hoop.xcodeproj/project.xcworkspace/xcuserdata/willem.xcuserdatad/: UserInterfaceState.xcuserstate
hoop/hoop.xcodeproj/xcuserdata/willem.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
hoop/hoop.xcodeproj/xcuserdata/willem.xcuserdatad/xcschemes/: All.xcscheme  Boards.xcscheme  Build.xcscheme  Index.xcscheme  Serial.xcscheme  Upload.xcscheme  xcschememanagement.plist
hoop/hoop/Builds/: dof.cpp.d  embeddedcomputing.elf  embeddedcomputing.hex  main.cpp.d  teensy31-TAG
hoop/hoop/Builds/hardware/teensy/avr/cores/teensy3/: AudioStream.cpp.d  DMAChannel.cpp.d  HardwareSerial1.cpp.d  HardwareSerial2.cpp.d  HardwareSerial3.cpp.d  IPAddress.cpp.d  IntervalTimer.cpp.d  Print.cpp.d  Stream.cpp.d  Tone.cpp.d  WMath.cpp.d  WString.cpp.d  analog.c.d  avr_emulation.cpp.d  eeprom.c.d  keylayouts.c.d  math_helper.c.d  memcpy-armv7m.S.d  mk20dx128.c.d  new.cpp.d  nonstd.c.d  pins_teensy.c.d  ser_print.c.d  serial1.c.d  serial2.c.d  serial3.c.d  touch.c.d  usb_desc.c.d  usb_dev.c.d  usb_flightsim.cpp.d  usb_inst.cpp.d  usb_joystick.c.d  usb_keyboard.c.d  usb_mem.c.d  usb_midi.c.d  usb_mouse.c.d  usb_rawhid.c.d  (+3 more)
hoop/hoop/Builds/user/FastLED/: FastLED.cpp.d  colorpalettes.cpp.d  colorutils.cpp.d  hsv2rgb.cpp.d  lib8tion.cpp.d  noise.cpp.d  power_mgt.cpp.d  wiring.cpp.d
hoop/hoop/Builds/user/MicroShield/: SFE_LSM9DS0.cpp.d
hoop/hoop/Builds/user/i2c_t3/: i2c_t3.cpp.d
hoop/hoop/Makefiles/: About.mk  Step1.mk  Step2.mk  Teensy.mk
hoop/hoop/Utilities/: _chrono  embedXcode_check
libraries/FastIR/: FastIR.h
libraries/IRremote/examples/IRrecvDump/: IRrecvDump.ino
libraries/burnutils/: burnutils.cpp  burnutils.h
treelights/: CMakeLists.txt
treelights/lib/: DmxReceiver  FastLED  OctoWS2811
treelights/src/: Context.h  Control.cpp  Control.h  ExampleSequence.cpp  ExampleSequence.h  SequenceBase.h  SinWaveSequence.cpp  SinWaveSequence.h  clock.cpp  clock.h  loop.cpp
trinket/: bike_leds.ino
(+3 files in other folders)
